fix: Update style on inviteContainer on mobile-view

--- a/src/styles/partials/_BuildingPage.scss
+++ b/src/styles/partials/_BuildingPage.scss
@@ -137,4 +137,12 @@
             flex: 1;
         }
     }
+    .generateInviteContainer{
+        width: 100%;
+        align-items: center;
+        .input{
+            flex: 2;
+            margin-left: 1rem;
+        }
+    }
 }
